# series_temporais

./: .gitignore
cap02/: .gitignore  README.md  main.py  pyproject.toml
cap02/notebooks/: EstudoCaso1-Parte1.ipynb  EstudoCaso1-Parte2.ipynb  EstudoCaso1-Parte3.ipynb
